@@ -5,20 +5,36 @@ import java.util.List;
 import java.util.function.Consumer;
 import java.util.function.Function;
 
+import com.mojang.blaze3d.pipeline.RenderPipeline;
 import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.font.TextRenderer;
+import net.minecraft.client.gl.Framebuffer;
+import net.minecraft.client.gl.RenderPipelines;
+import net.minecraft.client.gl.SimpleFramebuffer;
 import net.minecraft.client.gui.DrawContext;
+import net.minecraft.client.gui.ScreenRect;
+import net.minecraft.client.gui.render.state.SimpleGuiElementRenderState;
 import net.minecraft.client.gui.widget.ClickableWidget;
+import net.minecraft.client.gui.widget.TextFieldWidget;
+import net.minecraft.client.render.VertexConsumer;
+import net.minecraft.client.texture.TextureSetup;
+import net.minecraft.client.util.Pool;
 import net.minecraft.text.Text;
+import net.minecraft.util.Identifier;
 import net.minecraft.util.Util;
 
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
+import org.joml.Matrix3x2fStack;
 
 public class SuggestionListWidget<T> extends ClickableWidget {
-    private final TextRenderer textRenderer;
-    private final MinecraftClient client;
+	public static final Identifier BLUR_ID = Identifier.ofVanilla("blur");
+	public static final Framebuffer FRAMEBUFFER = new SimpleFramebuffer("Glowcase Suggestions", 1, 1, false);
+	public static final Pool POOL = new Pool(3);
+	private final TextRenderer textRenderer;
+	private final MinecraftClient client;
 
-    private final List<T> suggestions = new ArrayList<>();
+	private final List<T> suggestions = new ArrayList<>();
 	private @NotNull String filter = "";
     private int scrollOffset = 0;
 
@@ -52,6 +68,21 @@ public class SuggestionListWidget<T> extends ClickableWidget {
 		setWidth(width);
     }
 
+	public static <T> SuggestionListWidget<T> forTextField(TextFieldWidget textField, TextRenderer textRenderer, Function<T, String> toStringFunction) {
+		return new SuggestionListWidget<>(textRenderer, textField.getX(), textField.getY() + textField.getHeight() + 5, textField.getWidth(), 100, 10, 4, 5,
+			a -> textField.setText(toStringFunction.apply(a)), toStringFunction);
+	}
+
+	public static <T> SuggestionListWidget<T> forTextFieldWithStaticSuggestions(TextFieldWidget textField, TextRenderer textRenderer, List<T> suggestions, Function<T, String> toStringFunction) {
+		var suggestionWidget = forTextField(textField, textRenderer, toStringFunction);
+
+		textField.setChangedListener((text) -> {
+			suggestionWidget.updateSuggestions(suggestions, text);
+		});
+
+		return suggestionWidget;
+	}
+
 	@Override
 	public void setWidth(int width) {
 		super.setWidth(width);
@@ -81,67 +112,101 @@ public class SuggestionListWidget<T> extends ClickableWidget {
         }
 
         // if there is only 1 suggestion & it's equal to input, hide the list
-        if (suggestions.size() == 1 && toStringFunction.apply(suggestions.get(0)).equals(filter)) {
+        if (suggestions.size() == 1 && toStringFunction.apply(suggestions.getFirst()).equals(filter)) {
             suggestions.clear();
         }
 
         scrollOffset = 0;
+
+		if (suggestions.isEmpty()) {
+			FRAMEBUFFER.resize(1, 1);
+		}
     }
 
     @Override
     public void renderWidget(DrawContext context, int mouseX, int mouseY, float delta) {
         if (suggestions.isEmpty()) return;
-        
-        context.getMatrices().push();
-        context.getMatrices().translate(0, 0, 1);
-        
+
+		context.createNewRootLayer();
+		context.state.addSimpleElement(new SimpleGuiElementRenderState() {
+			@Override
+			public void setupVertices(VertexConsumer vertices, float depth) {
+				Matrix3x2fStack matrix = context.getMatrices();
+				vertices.vertex(matrix, 0, 0, depth).texture(0, 0).color(0xFFFFFFFF);
+				vertices.vertex(matrix, 0, 1, depth).texture(0, 1).color(0xFFFFFFFF);
+				vertices.vertex(matrix, 1, 1, depth).texture(1, 1).color(0xFFFFFFFF);
+				vertices.vertex(matrix, 1, 0, depth).texture(1, 0).color(0xFFFFFFFF);
+			}
+
+			@Override
+			public RenderPipeline pipeline() {
+				return RenderPipelines.MOJANG_LOGO;
+			}
+
+			@Override
+			public TextureSetup textureSetup() {
+				return TextureSetup.withoutGlTexture(FRAMEBUFFER.getColorAttachmentView());
+			}
+
+			@Override
+			public @Nullable ScreenRect scissorArea() {
+				return null;
+			}
+
+			@Override
+			public @Nullable ScreenRect bounds() {
+				return ScreenRect.empty();
+			}
+		});
+
+		context.createNewRootLayer();
+        context.getMatrices().pushMatrix();
+
+		int bgColor = 0x90000000;
         int adjustedLineHeight = baseLineHeight + padding * 2;
         int rows = Math.min(suggestions.size(), maxRows);
         int dynamicHeight = rows * adjustedLineHeight;
 
         boolean scrollable = suggestions.size() > maxRows;
         int totalLines = suggestions.size();
-        int maxLines = rows;
 
-        int listWidth = scrollable ? this.getWidth() - 5 - 10 : this.getWidth();
+		int listWidth = scrollable ? this.getWidth() - 5 - 10 : this.getWidth();
 
-        context.enableScissor(this.getX(), this.getY(), this.getX() + listWidth, this.getY() + dynamicHeight);
-        
-        float blurValue = (float) MinecraftClient.getInstance().options.getMenuBackgroundBlurrinessValue();
-        if (blurValue >= 1.0F) {
-            client.gameRenderer.renderBlur(delta);
-        }
+		int x = SuggestionListWidget.this.getX();
+		int y = SuggestionListWidget.this.getY();
+		context.enableScissor(x, y, x + listWidth, y + dynamicHeight);
 
-        client.getFramebuffer().beginWrite(false);
-        context.fill(this.getX(), this.getY(), this.getX() + listWidth, this.getY() + dynamicHeight, 0x90000000);
+		context.drawTexturedQuad(RenderPipelines.GUI_TEXTURED, FRAMEBUFFER.getColorAttachmentView(), 0, 0, FRAMEBUFFER.textureWidth / this.client.getWindow().getScaleFactor(), FRAMEBUFFER.textureHeight / this.client.getWindow().getScaleFactor(), 0, 1, 0, 1, -1);
 
-        drawOutline(context, this.getX(), this.getY(), listWidth, dynamicHeight, 0xFFFFFFFF);
+        context.fill(x, y, x + listWidth, y + dynamicHeight, bgColor);
 
-        if (scrollOffset > totalLines - maxLines) {
-            scrollOffset = Math.max(0, totalLines - maxLines);
+        drawOutline(context, x, y, listWidth, dynamicHeight, 0xFFFFFFFF);
+
+        if (scrollOffset > totalLines - rows) {
+            scrollOffset = Math.max(0, totalLines - rows);
         }
         
         // render each suggestion
-        for (int i = 0; i < maxLines; i++) {
+        for (int i = 0; i < rows; i++) {
             int suggestionIndex = i + scrollOffset;
             if (suggestionIndex >= totalLines) break;
             
             T suggestion = suggestions.get(suggestionIndex);
             String suggestionText = toStringFunction.apply(suggestion);
-            int suggestionY = getY() + i * adjustedLineHeight;
+            int suggestionY = y + i * adjustedLineHeight;
             
             // highlight hovered suggestion
-            if (mouseX >= this.getX() && mouseX <= this.getX() + listWidth && mouseY >= suggestionY && mouseY < suggestionY + adjustedLineHeight) {
-                context.fill(this.getX(), suggestionY, this.getX() + listWidth, suggestionY + adjustedLineHeight, 0xFF217C08);
-                drawOutline(context, this.getX(), suggestionY, listWidth, adjustedLineHeight, 0xFFFFFFFF);
+			boolean hover = mouseX >= x && mouseX <= x + listWidth && mouseY >= suggestionY && mouseY < suggestionY + adjustedLineHeight;
+			if (hover) {
+                context.fill(x, suggestionY, x + listWidth, suggestionY + adjustedLineHeight, 0xFF217C08);
+                drawOutline(context, x, suggestionY, listWidth, adjustedLineHeight, 0xFFFFFFFF);
             }
 
             // detect if the text is too long AND if the item is hovered, then scroll, otherwise don't
-            boolean suggestionHovered = (mouseX >= this.getX() && mouseX <= this.getX() + listWidth && mouseY >= suggestionY && mouseY < suggestionY + adjustedLineHeight);
             if (textRenderer.getWidth(suggestionText) > (this.getWidth() - padding - 20)) {
-                drawOverflowText(context, textRenderer, Text.literal(suggestionText), this.getX() + padding, suggestionY + padding - 2, this.getX() + listWidth - padding, suggestionY + adjustedLineHeight, 0xFFFFFF, suggestionHovered);
+                drawOverflowText(context, textRenderer, Text.literal(suggestionText), x + padding, suggestionY + padding - 2, x + listWidth - padding, suggestionY + adjustedLineHeight, 0xFFFFFFFF, hover);
             } else {
-                context.drawTextWithShadow(textRenderer, Text.literal(suggestionText), this.getX() + padding, suggestionY + padding + 1, 0xFFFFFF);
+                context.drawTextWithShadow(textRenderer, Text.literal(suggestionText), x + padding, suggestionY + padding + 1, 0xFFFFFFFF);
             }
         }
 
@@ -151,24 +216,16 @@ public class SuggestionListWidget<T> extends ClickableWidget {
         if (scrollable) {
             int scrollbarWidth = 10;
 
-            int sbX = getX() + listWidth + 5;
-            int sbY = getY();
+            int sbX = x + listWidth + 5;
 
-            int scrollbarHeight = dynamicHeight;
-            int scrollBarBgColor = 0x90000000;
+			context.enableScissor(sbX, y, sbX + scrollbarWidth, y + dynamicHeight);
 
-            context.enableScissor(sbX, sbY, sbX + scrollbarWidth, sbY + scrollbarHeight);
+			context.drawTexturedQuad(RenderPipelines.GUI_TEXTURED, FRAMEBUFFER.getColorAttachmentView(), 0, 0, FRAMEBUFFER.textureWidth / this.client.getWindow().getScaleFactor(), FRAMEBUFFER.textureHeight / this.client.getWindow().getScaleFactor(), 0, 1, 0, 1, -1);
 
-            float blurScrollbar = (float) client.options.getMenuBackgroundBlurrinessValue();
-            if (blurScrollbar >= 1.0F) {
-                client.gameRenderer.renderBlur(delta);
-            }
-            client.getFramebuffer().beginWrite(false);
-
-            context.fill(sbX, sbY, sbX + scrollbarWidth, sbY + scrollbarHeight, scrollBarBgColor);
+            context.fill(sbX, y, sbX + scrollbarWidth, y + dynamicHeight, bgColor);
             context.disableScissor();
 
-            drawOutline(context, sbX, sbY, scrollbarWidth, scrollbarHeight, 0xFFFFFFFF);
+            drawOutline(context, sbX, y, scrollbarWidth, dynamicHeight, 0xFFFFFFFF);
 
             float visibleRatio = (float) rows / totalLines;
             int handleHeight = Math.max((int)(visibleRatio * (dynamicHeight - 2 * 2)), 4);
@@ -176,13 +233,13 @@ public class SuggestionListWidget<T> extends ClickableWidget {
             int availableScroll = totalLines - rows;
             int handleYOffset = availableScroll > 0 ? (int)(((float)scrollOffset / availableScroll) * ((dynamicHeight - 2 * 2) - handleHeight)) : 0;
             int handleX = sbX + 2;
-            int handleY = sbY + 2 + handleYOffset;
+            int handleY = y + 2 + handleYOffset;
             int handleWidth = scrollbarWidth - 2 * 2;
             
             context.fill(handleX, handleY, handleX + handleWidth, handleY + handleHeight, 0xFFFFFFFF);
         }
 
-        context.getMatrices().pop();
+        context.getMatrices().popMatrix();
     }
 
     @Override
